fix funded by in dark mode

--- a/packages/admin-ui/src/components/sidebar/sidebar.scss
+++ b/packages/admin-ui/src/components/sidebar/sidebar.scss
@@ -72,7 +72,8 @@
  * Funded-by
  */
 
-.funded-by-text {
+.funded-by-text-light,
+.funded-by-text-dark {
   opacity: 0.3;
   text-align: center;
 }
@@ -86,12 +87,19 @@
   grid-gap: var(--spacing);
   padding: var(--spacing);
 }
-.funded-by-logo {
+.funded-by-logo-light,
+.funded-by-logo-dark {
   opacity: 0.15;
   transition: opacity 500ms ease;
   &:hover {
     opacity: 0.5;
   }
+}
+
+.funded-by-logo-dark,
+.funded-by-text-dark {
+  filter: invert(94%) sepia(1%) saturate(0%) hue-rotate(139deg) brightness(93%)
+    contrast(97%);
 }
 
 /* If the screen width is less or equal than 640 then display the funded by in flex columnd direction */
@@ -101,10 +109,12 @@
     grid-auto-flow: row;
     align-items: center;
   }
-  .funded-by-text {
+  .funded-by-text-light,
+  .funded-by-text-dark {
     font-size: 8px;
   }
-  .funded-by-logo {
+  .funded-by-logo-light,
+  .funded-by-logo-dark {
     max-width: 60%;
     max-height: 60%;
   }
